[package]
name = "vage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
num-format = "0.4.4"
rand = "0.8.5"
rayon = "1.7.0"
ripemd = "0.1.3"
secp256k1 = "0.27.0"
sha2 = { version = "0.10", features = ["asm"] }
